# tg-Telethon

./: .env.example  .gitignore  20260131_193113.backup.tgf.json  BUILD.md  Dockerfile  README.md  build.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  tgf-export.json  tgf.spec
.agent/rules/: rules.md
.github/workflows/: build.yml  docker-publish.yml
api/: deps.py  main.py  schemas.py
api/routers/: accounts.py  auth.py  backup.py  chats.py  forward.py  rules.py  settings.py  states.py  tasks.py  telegram.py  watcher.py
api/services/: __init__.py  task_manager.py  telegram.py  telegram_auth.py  telegram_client_manager.py  watcher_manager.py
api/static/: index.html
api/static/assets/: index-B9T6sOHV.js  index-BmDMkgxt.css  index-BmVDryTV.css  index-Bz2N8zV3.css  index-CIkBqFUo.js  index-CM0CaYUc.js  index-DHVLTF01.css  (+5 more)
data/: .gitkeep
exports/: export_Solana链上赚币交流群_20260202_201518.json
hooks/: hook-rich.py
tgf/: __init__.py  __main__.py
tgf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tgf/cli/: __init__.py  backup.py  chat.py  filter.py  forward.py  login.py  main.py  rule.py  utils.py  watch.py
tgf/core/: __init__.py  client.py  forwarder.py  media.py
tgf/data/: __init__.py  config.py  database.py  models.py  session.py
tgf/service/: __init__.py  auth_service.py  forward_service.py  watch_service.py
tgf/utils/: __init__.py  exceptions.py  filter.py  logger.py  m3u8.py  parallel_upload.py  retry.py  upload_settings.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
(+14 files in other folders)
